# REG

./: .gitignore  CITATION.cff  LICENSE.md  README.md  aimall_utils.py  auto_reg.py  dftd3_utils.py  example2.py  example_1.py  gaussian_utils.py  main.py  nbo_utils.py  organize_data.py  plot_reg.py  reg.py  reg_analysis_gui.py  reg_vis.py  script-param_BH2-NBO.py  script-param_BH2-diff.py  script-param_NH2-NBO.py  script-runreg_BH2-diff.py  script_REGNBO_common.py  script_REGNBO_common_v2.py  script_REGNBO_common_v3.py  script_REGNBO_common_v4.py  script_REGdiff_common.py  setup.cfg  setup_rdp.py  test.py
REG/: __init__.py  aimall_utils.py  auto_reg.py  dftd3_utils.py  gaussian_utils.py  morphy_utils.py  reg.py  reg_analysis_gui.py  reg_vis.py
REG.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: aimall_utils.py  auto_reg.py  reg.py  setup_rdp.py
tests/SN2/1/: SP_WFN.gjf  SP_WFN.out  SP_WFN.xyz  fort.7  frame.extout  frame.mgp  frame.mgpviz  frame.sum  frame.sumviz  frame.wfn  frame.xyz
tests/SN2/10/: SP_WFN.gjf  SP_WFN.out  SP_WFN.xyz  fort.7  frame.extout  frame.mgp  frame.mgpviz  frame.sum  frame.sumviz  frame.wfn
tests/SN2/11/: SP_WFN.gjf  SP_WFN.out  SP_WFN.xyz  fort.7  frame.extout  frame.mgp  frame.mgpviz  frame.sum  frame.sumviz  frame.wfn
tests/SN2/12/: SP_WFN.gjf  SP_WFN.out  SP_WFN.xyz  fort.7  frame.extout  frame.mgp  frame.mgpviz  frame.sum  frame.sumviz  frame.wfn
tests/SN2/13/: SP_WFN.gjf  SP_WFN.out  SP_WFN.xyz  fort.7  frame.extout  frame.mgp  frame.mgpviz  frame.sum  frame.sumviz  frame.wfn
tests/SN2/14/: SP_WFN.gjf  (+9 more)
(+1708 files in other folders)
