[metadata]
name = REG
version = 0.1.0
author = Fabio Falcioni, Leonardo Duarte
author_email = fabio.falcioni@manchester.ac.uk
maintainer = Fabio Falcioni
maintainer_email = fabio.falcioni@manchester.ac.uk
description = Relative Energy Gradient Package
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT
project_urls = 
    github = https://github.com/FabioFalcioni/REG.py
classifiers=
    Development Status :: 0 - Alpha
    Intended Audience :: Users, Developers
    Operating System :: OS Independent
[options]
packages = find:
install_requires =
    numpy
    pandas
    AdjustText
    typing-extensions
    xlsxwriter
python_requires = >=3.7
[options.packages.find]
exclude = 
    docs*
[bdist_wheel]
python-tag=py37
